--- a/client/app/components/materialPlanning/materialPlanning.component.html
+++ b/client/app/components/materialPlanning/materialPlanning.component.html
@@ -17,14 +17,19 @@
     </div>
 </div>
 
+<script language="javascript">
 
-<table class="table-responsive table-bordered table-striped">
-    <script language="javascript">
-        function setColspan() {
-            var th = document.getElementById("verwendung").colSpan = "4";
-            th.setAttribute("colspan", 4);
-        }
-    </script>
+    alert("Rabbit out of the hat!");
+    console.log("skript ausgeführt");
+    function setColspan() {
+        alert("Rabbit out of the hat!");
+        console.log("Funktion ausgeführt");
+        var th = document.getElementById("verwendung").colSpan = "4";
+        th.setAttribute("colspan", 4);
+    }
+</script>
+
+<table class="table-responsive table-bordered table-striped" onload="setColspan()">
     <caption width="100%" class="text-center">{{'material_Planning' | translate}}</caption>
     <thead>
     <tr>
@@ -32,8 +37,8 @@
         <th colspan="1" class="text-center">{{'delivery_time' | translate}}</th>
         <th colspan="1" class="text-center">{{'deviation' | translate}}</th>
         <th colspan="1" class="text-center">{{'sum' | translate}}</th>
-        <!--<th onload="setColspan()" id="verwendung" class="text-center">{{'use' | translate}}</th>-->
-        <th colspan="4" id="verwendung" class="text-center">{{'use' | translate}}</th>
+        <th id="verwendung" class="text-center">{{'use' | translate}}></th>
+        <!--<th colspan="4" id="verwendung" class="text-center">{{'use' | translate}}</th>-->
         <th colspan="1" class="text-center">{{'discount_sum' | translate}}</th>
         <th colspan="1" class="text-center">{{'opening_stock' | translate}}</th>
         <th colspan="4" class="text-center">{{'gross_requirements_period' | translate}}</th>
