--- a/client/app/components/materialPlanning/materialPlanning.component.html
+++ b/client/app/components/materialPlanning/materialPlanning.component.html
@@ -60,12 +60,16 @@
     </thead>
 
     <tbody>
-    <tr *ngFor="let m of matPlan">
+    <tr>
         <td>{{m.kpartnr}}</td>
         <td>{{m.lieferfrist}}</td>
         <td>{{m.abweichung}}</td>
         <td>{{m.summe}}</td>
-        <td *ngFor="let v of m.verwendung">{{v.Menge}}</td>
+        <td *ngFor="let v of m.verwendung; let b = index">
+            <!--{{m.verwendung[b].Menge}}-->
+            <!--{{m.verwendung[0].Menge}}-->
+            {{v.Menge}}
+        </td>
         <td></td>
         <td></td>
         <td></td>
