--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -54,7 +54,7 @@
                 <a routerLink="/workstations" routerLinkActive="active">{{'sidebar_workstations' | translate}}<span class="menu-icon fa fa-television"></span></a>
             </li>
             <li class="sidebar-list">
-                <a>{{'sidebar_partsLists' | translate}}<span class="menu-icon fa fa-sitemap"></span></a>
+                <a routerLink="/partsLists" routerLinkActive="active">{{'sidebar_partsLists' | translate}}<span class="menu-icon fa fa-sitemap"></span></a>
             </li>
             <li class="sidebar-list">
                 <a routerLink="/parts" routerLinkActive="active">{{'sidebar_parts' | translate}}<span class="menu-icon fa fa-cube"></span></a>
