--- a/client/app/components/dashboard/dashboard.component.html
+++ b/client/app/components/dashboard/dashboard.component.html
@@ -27,11 +27,12 @@
                 <div class="panel-heading">
                     <span class="pull-right clickable" data-effect="fadeOut" (click)="deleteClicked(crit)"><i class="fa fa-times"></i></span>
                     {{'dashboard_danger' | translate}}!
-                    <p>{{crit.name}}</p>
+                    <p *ngIf="crit.from === 'warehousestock'">{{'dashboard_warehouse_crit' | translate}}{{crit.displayValue}}</p>
+                    <p *ngIf="crit.from === 'deliveryreliability'">{{'dashboard_deliveryreliabiliy_bad' | translate}}: {{crit.displayValue}}</p>
                 </div>
                 <div class="panel-body">
-                    <p>Article: {{crit.article}}</p>
-                    <p>Value: {{crit.value}}</p>
+                    <p *ngIf="crit.article" >{{'dashboard_article' | translate}}: {{crit.article}}</p>
+                    <span *ngIf="crit.value">{{'dashboard_value' | translate}}: {{crit.value}}</span>
                 </div>
             </div>
         </div>
@@ -54,11 +55,12 @@
                     <span class="pull-right clickable" data-effect="fadeOut" (click)="deleteClicked(warn)"><i class="fa fa-times"></i></span>
                     {{'dashboard_warning' | translate}}!
                     <br>
-                    <p>{{warn.name}}</p>
+                    <p *ngIf="warn.from === 'warehousestock'">{{'dashboard_warehouse_warn' | translate}}{{warn.displayValue}}</p>
+                    <p *ngIf="warn.from === 'deliveryreliability'">{{'dashboard_deliveryreliabiliy_bad' | translate}}: {{warn.displayValue}}</p>
                 </div>
                 <div class="panel-body">
-                    <p>{{'dashboard_article' | translate}}: {{warn.article}}</p>
-                    <span>{{'dashboard_value' | translate}}: {{warn.value}}</span>
+                    <p *ngIf="warn.article" >{{'dashboard_article' | translate}}: {{warn.article}}</p>
+                    <span *ngIf="warn.value">{{'dashboard_value' | translate}}: {{warn.value}}</span>
                 </div>
             </div>
         </div>
@@ -80,11 +82,12 @@
                 <div class="panel-heading">
                     <span class="pull-right clickable" data-effect="fadeOut" (click)="deleteClicked(good)"><i class="fa fa-times"></i></span>
                     {{'dashboard_good' | translate}}!
-                    <p>{{good.name}}</p>
+                    <p *ngIf="good.from === 'warehousestock'">{{'dashboard_warehouse_good' | translate}}: {{good.displayValue | percent}}</p>
+                    <p *ngIf="good.from === 'deliveryreliability'">{{'dashboard_deliveryreliabiliy_good' | translate}}: {{good.displayValue}}</p>
                 </div>
                 <div class="panel-body">
-                    <p>Article: {{good.article}}</p>
-                    <span>Value: {{good.value}}</span>
+                    <p *ngIf="good.article" >{{'dashboard_article' | translate}}: {{good.article}}</p>
+                    <span *ngIf="good.value">{{'dashboard_value' | translate}}: {{good.value}}</span>
                 </div>
             </div>
         </div>
