fixed bug Material Planning

--- a/client/app/components/materialPlanning/materialPlanning.component.html
+++ b/client/app/components/materialPlanning/materialPlanning.component.html
@@ -65,7 +65,7 @@
         <td>{{m.lieferfrist}}</td>
         <td>{{m.abweichung}}</td>
         <td>{{m.summe}}</td>
-        <td *ngFor="let v of m.verwendung; let b = index">
+        <td *ngFor="let v of m.verwendung">
             <!--{{m.verwendung[b].Menge}}-->
             <!--{{m.verwendung[0].Menge}}-->
             {{v.Menge}}
