Added Prio Component

--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -34,7 +34,7 @@
                 <a routerLink="/capacityPlanning" routerLinkActive="active">{{'sidebar_capacityPlanning' | translate}}<span class="menu-icon fa fa-battery-half"></span></a>
             </li>
             <li class="sidebar-list">
-                <a>{{'sidebar_prio' | translate}}<span class="menu-icon fa fa-sort "></span></a>
+                <a routerLink="/prioritization" routerLinkActive="active">{{'sidebar_prio' | translate}}<span class="menu-icon fa fa-sort "></span></a>
             </li>
             <li class="sidebar-title"><span>{{'sidebar_overview' | translate}}</span></li>
             <li class="sidebar-list">
