--- a/client/app/components/materialPlanning/materialPlanning.component.html
+++ b/client/app/components/materialPlanning/materialPlanning.component.html
@@ -30,7 +30,7 @@
         <th id="Verwendung" class="text-center">{{'use' | translate}}</th>
         <th colspan="1" class="text-center">{{'discount_sum' | translate}}</th>
         <th colspan="1" class="text-center">{{'opening_stock' | translate}}</th>
-        <th colspan="4" class="text-center">{{'gross_requirements_period' | translate}}</th>
+        <th id="Bruttobedarf" class="text-center">{{'gross_requirements_period' | translate}}</th>
         <th colspan="1" class="text-center">{{'sum_without_order' | translate}}</th>
         <th colspan="1" class="text-center">{{'volume_ordered' | translate}}</th>
         <th colspan="1" class="text-center">{{'ordertype' | translate}}</th>
@@ -45,10 +45,7 @@
         <th *ngFor="let m of verwendungRow" scope="col" class="text-center">{{m}}</th>
         <th scope="col"></th>
         <th scope="col"></th>
-        <th>1</th>
-        <th>2</th>
-        <th>3</th>
-        <th>4</th>
+        <th *ngFor="let p of periodrow" scope="col" class="text-center">{{p}}</th>
         <th></th>
         <th></th>
         <th></th>
@@ -66,8 +63,6 @@
         <td>{{m.abweichung}}</td>
         <td>{{m.summe}}</td>
         <td *ngFor="let v of m.verwendung">
-            <!--{{m.verwendung[b].Menge}}-->
-            <!--{{m.verwendung[0].Menge}}-->
             {{v.Menge}}
         </td>
         <td></td>
